fix logo overflowing in education.html

--- a/styles/education.css
+++ b/styles/education.css
@@ -1,4 +1,4 @@
-/* General*/
+/* General */
 body {
     line-height: 1.6;
     background-color: #fff;
@@ -83,8 +83,10 @@ section {
     font-size: 2.5em;
 }
 .university-logo {
-    max-width: 100px;
+    max-width: 100%;
     height: auto;
+    display: block;
+    margin: 0 auto;
 }
 .fonts{
     font-family: 'Courier New', Courier, monospace;
