--- a/styles/index.css
+++ b/styles/index.css
@@ -121,7 +121,7 @@ strong {
 
 .para-span {
     font-style: italic;
-    font-weight: 550;
+    font-weight: 600;
 }
 
 .word {
